// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Heap's identifyUser destination action: all fields 1`] = `
Object {
  "app_id": "L2yK@YacG",
  "identity": "L2yK@YacG",
  "properties": Object {
    "anonymous_id": "L2yK@YacG",
    "testType": "L2yK@YacG",
  },
}
`;

exports[`Testing snapshot for Heap's identifyUser destination action: required fields 1`] = `
Object {
  "app_id": "L2yK@YacG",
  "identity": "L2yK@YacG",
  "properties": Object {
    "anonymous_id": "L2yK@YacG",
  },
}
`;
